syntax="proto3";

import "google/protobuf/empty.proto";

option go_package = "./admin";

service Admin {
  rpc CreateDevice(CreateDeviceReq) returns(google.protobuf.Empty);
  rpc DeleteDevice(DeleteDeviceReq) returns(google.protobuf.Empty);
  rpc UpdateDevice(UpdateDeviceReq) returns(google.protobuf.Empty);
}

message CreateDeviceReq {
  string Title = 1;
  string Description = 2;
  float Price = 3;
  string Manufacturer = 4;
  uint32 Amount = 5;
}

message DeleteDeviceReq {
  string UUID = 1;
}

message UpdateDeviceReq {
  string Title = 1;
  string Description = 2;
  float Price = 3;
  string UUID = 4;
}
