syntax = "proto3";

option go_package = "github.com/alserov/device-shop/proto/gen/device";

package device;

message Device {
  string UUID = 1;
  string Title = 2;
  string Description = 3;
  float  Price = 4;
  string Manufacturer = 5;
  uint32 Amount = 6;
}


service Devices {
  rpc GetAllDevices(GetAllDevicesReq) returns (DevicesRes);
  rpc GetDevicesByTitle(GetDeviceByTitleReq) returns (DevicesRes);
  rpc GetDevicesByManufacturer(GetByManufacturer) returns(DevicesRes);
  rpc GetDevicesByPrice(GetByPrice) returns(DevicesRes);

  rpc GetDeviceByUUID(GetDeviceByUUIDReq) returns(Device);
}

message GetAllDevicesReq {
  uint32 Index = 1;
  uint32 Amount = 2;
}

message GetDeviceByTitleReq {
  string Title = 1;
}

message IncreaseDeviceAmountByUUIDReq {
  string DeviceUUID = 1;
  uint32 Amount = 2;
}

message GetByPrice {
  uint32 Min = 1;
  uint32 Max = 2;
}

message GetByManufacturer {
  string Manufacturer = 1;
}

message GetDeviceByUUIDReq {
  string UUID = 1;
}

message DevicesRes {
  repeated Device Devices = 1;
}
